--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,36 @@ body {
 	/* color: rgb(var(--foreground-rgb));
 	background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
 }
+
+.letstry::after {
+	content: '';
+	position: absolute;
+	inset: 0;
+	z-index: -1;
+
+	background: white;
+	mask: linear-gradient(to top, transparent, black 35%);
+	backdrop-filter: blur(2px);
+}
+
+.swiper-button-next {
+	background-image: url(/images/arrowRight.svg);
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	background-position: center;
+}
+
+.swiper-button-next::after {
+	display: none;
+}
+
+.swiper-button-prev {
+	background-image: url(/images/arrowLeft.svg);
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	background-position: center;
+}
+
+.swiper-button-prev::after {
+	display: none;
+}
