--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,21 @@ body {
   /* color: rgb(var(--foreground-rgb));
 	background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
   /* cursor: none; */
+  cursor: url("/images/logo.svg") 12 12, auto;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotating-element {
+  display: inline-block;
+  animation: rotate 2s linear infinite;
 }
 
 @keyframes marquee {
@@ -101,7 +116,7 @@ body {
   justify-content: space-around;
   gap: var(--gap);
   min-width: 100%;
-  animation: scroll 60s linear infinite;
+  animation: scroll 200s linear infinite;
 }
 
 @keyframes scroll {
