new-prod-detail-view-etc-11-06-2025

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,12 @@ body {
   cursor: url("/images/logo.svg") 12 12, auto;
 }
 
+body.screen-locked {
+  overflow: hidden;
+  height: 100vh;
+  /* touch-action: none; */
+}
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
